# mx-spawner-sc

./: .gitignore  Cargo.toml  README.md  mxpy.data-storage.json  rustfmt.toml
interaction/: snippets.sh
interactor/: Cargo.toml
interactor/src/: interact.rs  interactor_main.rs  proxy.rs
interactor/tests/: interact_cs_tests.rs  interact_tests.rs
meta/: Cargo.toml
meta/src/: main.rs
src/: blueprint.rs  config.rs  contract.rs  events.rs  lib.rs  object.rs
tests/: setup.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
