[package]
name = "spawner"
version = "0.0.0"
authors = ["Micha Vie <micha@peerme.io>", "Spawnable <hello@spawnable.io>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.50.3"

[dev-dependencies.multiversx-sc-scenario]
version = "0.50.3"
