[package]
name = "spawner-wasm"
version = "0.0.0"
edition = "2018"
publish = false
authors = ["Micha Vie <micha@peerme.io>", "Spawnable <hello@spawnable.io>"]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.spawner]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.42.0"
